@@ -47,6 +47,10 @@
     <span class="fn"><a href="http://www.xanthir.com/contact/">Tab Atkins Jr.</a></span>,
     <span class="org">Google, Inc.</span>
   </dd>
+  <dt>Test suite:</dt>
+  <dd>
+    <a href="http://test.csswg.org/harness/test/CSS-MASKING_DEV/">http://test.csswg.org/harness/test/CSS-MASKING_DEV/</a>
+  </dd>
 </dl>
 
 <!--copyright-->
