@@ -11,7 +11,7 @@
    rel=dcterms.rights>
   <meta content="CSS Masking" name=dcterms.title>
   <meta content=text name=dcterms.type>
-  <meta content=2013-05-29 name=dcterms.date>
+  <meta content=2013-05-30 name=dcterms.date>
   <meta content="Dirk Schulze" name=dcterms.creator>
   <meta content="Brian Birtles" name=dcterms.creator>
   <meta
@@ -36,14 +36,14 @@
 
    <h1>CSS Masking Level 1</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 29 May 2013</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 30 May 2013</h2>
 
    <dl>
     <dt>This version:
 
     <dd><a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/default/masking/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/default/masking/index.html</a>
-     <!--http://www.w3.org/TR/2013/WD-css-masking-20130529/-->
+     <!--http://www.w3.org/TR/2013/WD-css-masking-20130530/-->
 
     <dt>Latest version:
 
@@ -68,6 +68,11 @@
     <dd class=vcard> <span class=fn><a
      href="http://www.xanthir.com/contact/">Tab Atkins Jr.</a></span>, <span
      class=org>Google, Inc.</span>
+
+    <dt>Test suite:
+
+    <dd> <a
+     href="http://test.csswg.org/harness/test/CSS-MASKING_DEV/">http://test.csswg.org/harness/test/CSS-MASKING_DEV/</a>
    </dl>
    <!--begin-copyright-->
    <p class=copyright><a
