@@ -1,3 +1,6 @@
+2013-05-30  Dirk Schulze  <dschulze@adobe.com>
+	Add link to test suite.
+
 2013-05-29  Dirk Schulze  <dschulze@adobe.com>
 	Add note and issue that 'mask: none' does not influence 'mask-box-image'.
 
